Update Operaciones entre Datos.ipynb

--- a/Tarea8_Martiñon/Código/Operaciones entre Datos.ipynb
+++ b/Tarea8_Martiñon/Código/Operaciones entre Datos.ipynb
@@ -350,7 +350,7 @@
     "plt.legend()\n",
     "plt.xticks(np.arange(2007,2018))\n",
     "\n",
-    "plt.ylabel('Porcentaje')\n",
+    "plt.ylabel('Cantidad')\n",
     "plt.xlabel('Año')\n",
     "\n",
     "plt.show()"
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
     "plt.legend()\n",
     "plt.xticks(np.arange(2000,2018))\n",
     "\n",
-    "plt.ylabel('Porcentaje')\n",
+    "plt.ylabel('Cantidad')\n",
     "plt.xlabel('Año')\n",
     "\n",
     "plt.show()"
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -528,6 +528,259 @@
     "    plt.legend(nombres,loc='best')\n",
     "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Juntando los datos de México"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Año</th>\n",
+       "      <th>Ranking Felicidad</th>\n",
+       "      <th>Ranking Brecha de Género</th>\n",
+       "      <th>Índice de Brecha de Género</th>\n",
+       "      <th>Suicidios</th>\n",
+       "      <th>Suicidios por cada 100,000 Habitantes</th>\n",
+       "      <th>Reclusos</th>\n",
+       "      <th>Reclusos por cada 100,000 Habitantes</th>\n",
+       "      <th>Homicidios</th>\n",
+       "      <th>Víctimas de homicidio Mujeres</th>\n",
+       "      <th>Víctimas de homicidio Hombres</th>\n",
+       "      <th>Homicidios por cada 100,000 Habitantes</th>\n",
+       "      <th>IDH</th>\n",
+       "      <th>Ranking IDH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>24</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.7210</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>25</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>0.6920</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>181999.0</td>\n",
+       "      <td>140.91</td>\n",
+       "      <td>32079.0</td>\n",
+       "      <td>3444.0</td>\n",
+       "      <td>28635.0</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>0.774</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>21</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>0.7000</td>\n",
+       "      <td>6289.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>190175.0</td>\n",
+       "      <td>149.17</td>\n",
+       "      <td>24559.0</td>\n",
+       "      <td>2821.0</td>\n",
+       "      <td>21738.0</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>0.722</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>14</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>0.6990</td>\n",
+       "      <td>6282.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>221439.0</td>\n",
+       "      <td>175.90</td>\n",
+       "      <td>20762.0</td>\n",
+       "      <td>2393.0</td>\n",
+       "      <td>18369.0</td>\n",
+       "      <td>16.5</td>\n",
+       "      <td>0.767</td>\n",
+       "      <td>145.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.6900</td>\n",
+       "      <td>6215.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>228021.0</td>\n",
+       "      <td>183.56</td>\n",
+       "      <td>20010.0</td>\n",
+       "      <td>2420.0</td>\n",
+       "      <td>17590.0</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>0.761</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>16</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>0.6917</td>\n",
+       "      <td>5751.0</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>218373.0</td>\n",
+       "      <td>178.21</td>\n",
+       "      <td>23063.0</td>\n",
+       "      <td>2664.0</td>\n",
+       "      <td>20399.0</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>0.756</td>\n",
+       "      <td>146.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Año  Ranking Felicidad  Ranking Brecha de Género  \\\n",
+       "0  2019                 23                       0.0   \n",
+       "1  2018                 24                      50.0   \n",
+       "2  2017                 25                      81.0   \n",
+       "3  2016                 21                      66.0   \n",
+       "4  2015                 14                      71.0   \n",
+       "5  2014                  0                      80.0   \n",
+       "6  2013                 16                      68.0   \n",
+       "\n",
+       "   Índice de Brecha de Género  Suicidios  \\\n",
+       "0                      0.0000        0.0   \n",
+       "1                      0.7210        0.0   \n",
+       "2                      0.6920        0.0   \n",
+       "3                      0.7000     6289.0   \n",
+       "4                      0.6990     6282.0   \n",
+       "5                      0.6900     6215.0   \n",
+       "6                      0.6917     5751.0   \n",
+       "\n",
+       "   Suicidios por cada 100,000 Habitantes  Reclusos  \\\n",
+       "0                                    0.0       0.0   \n",
+       "1                                    0.0       0.0   \n",
+       "2                                    0.0  181999.0   \n",
+       "3                                    5.2  190175.0   \n",
+       "4                                    5.2  221439.0   \n",
+       "5                                    5.2  228021.0   \n",
+       "6                                    4.9  218373.0   \n",
+       "\n",
+       "   Reclusos por cada 100,000 Habitantes  Homicidios  \\\n",
+       "0                                  0.00         0.0   \n",
+       "1                                  0.00         0.0   \n",
+       "2                                140.91     32079.0   \n",
+       "3                                149.17     24559.0   \n",
+       "4                                175.90     20762.0   \n",
+       "5                                183.56     20010.0   \n",
+       "6                                178.21     23063.0   \n",
+       "\n",
+       "   Víctimas de homicidio Mujeres  Víctimas de homicidio Hombres  \\\n",
+       "0                            0.0                            0.0   \n",
+       "1                            0.0                            0.0   \n",
+       "2                         3444.0                        28635.0   \n",
+       "3                         2821.0                        21738.0   \n",
+       "4                         2393.0                        18369.0   \n",
+       "5                         2420.0                        17590.0   \n",
+       "6                         2664.0                        20399.0   \n",
+       "\n",
+       "   Homicidios por cada 100,000 Habitantes    IDH  Ranking IDH  \n",
+       "0                                     0.0  0.000          0.0  \n",
+       "1                                     0.0  0.000          0.0  \n",
+       "2                                    24.8  0.774         74.0  \n",
+       "3                                    19.3  0.722         74.0  \n",
+       "4                                    16.5  0.767        145.0  \n",
+       "5                                    16.1  0.761        146.0  \n",
+       "6                                    18.8  0.756        146.0  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_Mexico = pd.DataFrame({'Año':np.arange(2019,2012,-1),\n",
+    "                            'Ranking Felicidad':[23,24,25,21,14,0,16],\n",
+    "                            'Ranking Brecha de Género':[0]+list(Brecha_gen_Mex['Ranking'][:-7]),\n",
+    "                            'Índice de Brecha de Género':[0]+list(Brecha_gen_Mex['Índice de Brecha de Género'][:-7]),\n",
+    "                            'Suicidios':[0,0,0]+list(Suicidios_Mex[:-7]['Suicidios']),\n",
+    "                            'Suicidios por cada 100,000 Habitantes':[0,0,0]+list(Suicidios_Mex[:-7]['Por cada 100,000 Habitantes']),\n",
+    "                            'Reclusos':[0,0]+list(Reclusos_Mex['Reclusos'][:-5]),\n",
+    "                            'Reclusos por cada 100,000 Habitantes':[0,0]+list(Reclusos_Mex['Por cada 100,000 Habitantes'][:-5]),\n",
+    "                            'Homicidios':[0,0]+list(Homicidios_Mex['Homicidios'][:-13]),\n",
+    "                            'Víctimas de homicidio Mujeres':[0,0]+list(Homicidios_Mex['Víctimas Mujeres'][:-13]),\n",
+    "                            'Víctimas de homicidio Hombres':[0,0]+list(Homicidios_Mex['Víctimas Hombres'][:-13]),\n",
+    "                            'Homicidios por cada 100,000 Habitantes':[0,0]+list(Homicidios_Mex['Por cada 100,000 Habitantes'][:-13]),\n",
+    "                            'IDH':[0,0]+list(IDH_Mex['IDH'][:-7]),\n",
+    "                            'Ranking IDH':[0,0]+list(IDH_Mex['Ranking'][:-7])\n",
+    "                           })\n",
+    "data_Mexico"
    ]
   }
  ],
